--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-user-idle": "^2.2.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "json-server": "^0.16.1",
+    "jspdf": "^1.5.3",
     "moment": "^2.24.0",
     "ng2-charts": "^2.3.0",
+    "ngx-filesaver": "^9.0.0",
     "ngx-pagination": "^5.0.0",
+    "pdfmake": "^0.1.65",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
